name:                tt-singletons
version:             0.1.0.0
synopsis:            A small type theory with singletons
-- description:
license:             MIT
license-file:        LICENSE
author:              Jonathan Sterling
maintainer:          jon@jonmsterling.com
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     TT.Operator,
                       TT.Context,
                       TT.Model,
                       TT.Monad,
                       TT.Judge,
                       TT.Exception,
                       TT.Example
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8,
                       abt >=0.1.0.2.1,
                       vinyl >=0.5,
                       containers,
                       exceptions,
                       lens,
                       lens-action >=0.1.0.1,
                       mtl,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
